--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -1,4 +1,5 @@
 {% extends 'comicsdb/base.html' %}
+{% load thumbnail %}
 {% load static %}
 
 {% block page-title %}Issue List{% endblock page-title %}
@@ -43,9 +44,11 @@
         <a href="{% url 'issue:detail' issue.slug %}">
           <figure class="image is-2by3">
           {% if issue.image %}
-            <img src="{{ issue.image.url }}" alt = "{{ issue }}" >
+            {% thumbnail issue.image "320x480" crop="center" as im %}
+              <img src="{{ im.url }}" alt = "{{ issue }}">
+            {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}" >
+            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ issue }}">
           {% endif %}
           </figure>
         </a>
