--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -1,4 +1,5 @@
 {% extends 'comicsdb/base.html' %}
+{% load thumbnail %}
 {% load static %}
 
 {% block page-title %}Publisher Detail{% endblock page-title %}
@@ -34,9 +35,11 @@
       <div class="box">
         <figure class="image is-2by3">
           {% if publisher.image %}
-            <img src="{{ publisher.image.url }}" alt = "{{ publisher.name }}" >
+            {% thumbnail publisher.image "320x480" crop="center" as im %}
+              <img src="{{ im.url }}" alt = "{{ publisher.name }}">
+            {% endthumbnail %}
           {% else %}
-            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ publisher.name }}" >
+            <img src="{% static 'site/img/image-not-found.png' %}" alt="No image for {{ publisher.name }}">
           {% endif %}
         </figure>
       </div>
