--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -80,6 +80,42 @@
            <p class="title is-5">No information available.</p>
         {% endif %}
       </div>
+      <!-- issue credits -->
+      {% with credits=issue.credits_set.all %}
+        {% if credits %}
+          <div class="box">
+            <h1 class="title is-5">Credits</h1>
+            <!-- creators -->
+            {% for credit in credits %}
+              <article class="media">
+                <div class="media-left">
+                  <figure class="image is-64x64">
+                  {% thumbnail credit.creator.image "64x64" crop="center" as im %}
+                    <img src="{{ im.url }}" alt="{{ credit.creator }}">
+                  {% endthumbnail %}
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <div class="content">
+                    <p>{{ credit.creator }}
+                    <br>
+                      <!-- creator roles -->
+                      {% with roles=credit.role.all %}
+                        {% if roles %}
+                          {% for role in roles %}<small><em>{% if not forloop.first %}, {% endif %}{{ role.name }}</em></small>{% endfor %}
+                        {% endif %}
+                      {% endwith %}
+                      <!-- end creator roles -->
+                    </p>
+                  </div>
+                </div>
+              </article>
+            {% endfor %}
+            <!-- end creators -->
+          </div>
+        {% endif %}
+      {% endwith %}
+      <!-- end issue credits -->
     </div>
     <!-- end of issue summary -->
 
