Add button to issue_detail for adding credit

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -41,6 +41,9 @@
     </div>
     <div class="level-right">
       <p class="level-item">
+        <a class="button is-info" href="" title="Add issue credit">Add Credit</a>
+      </p>
+      <p class="level-item">
         <a class="button is-primary" href="{% url 'issue:update' issue.slug %}" title="Edit Issue">Edit</a>
       </p>
       <p class="level-item">
