--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -41,7 +41,7 @@
     </div>
     <div class="level-right">
       <p class="level-item">
-        <a class="button is-info" href="" title="Add issue credit">Add Credit</a>
+        <a class="button is-info" href="{% url 'issue:credit' issue.slug %}" title="Add issue credit">Add Credit</a>
       </p>
       <p class="level-item">
         <a class="button is-primary" href="{% url 'issue:update' issue.slug %}" title="Edit Issue">Edit</a>
