Make the issue field a Select widget in the credits_form template

--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -9,7 +9,7 @@
     <div class="field">
       <label class="label">Issue</label>
       <div class="control">
-        {{ form.issue.errors }}{{ form.issue }}
+        <div class="select">{{ form.issue.errors }}{{ form.issue }}</div>
       </div>
     </div>
     <div class="field">
