Improve the button labels on the issue_detail template

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -44,10 +44,10 @@
         <a class="button is-info" href="{% url 'issue:credit' issue.slug %}" title="Add issue credit">Add Credit</a>
       </p>
       <p class="level-item">
-        <a class="button is-primary" href="{% url 'issue:update' issue.slug %}" title="Edit Issue">Edit</a>
+        <a class="button is-primary" href="{% url 'issue:update' issue.slug %}" title="Edit Issue">Edit Issue</a>
       </p>
       <p class="level-item">
-        <a class="button is-danger" href="{% url 'issue:delete' issue.slug %}" title="Delete Issue">Delete</a>
+        <a class="button is-danger" href="{% url 'issue:delete' issue.slug %}" title="Delete Issue">Delete Issue</a>
       </p>
     </div>
   </nav>
