--- a/comicsdb/templates/comicsdb/base.html
+++ b/comicsdb/templates/comicsdb/base.html
@@ -23,6 +23,7 @@
           <a class="navbar-item" href="{% url 'series:list' page=1 %}">Series</a>
           <a class="navbar-item" href="{% url 'issue:list' page=1 %}">Issues</a>
           <a class="navbar-item" href="{% url 'creator:list' page=1 %}">Creators</a>
+          <a class="navbar-item" href="{% url 'arc:list' page=1 %}">Story Arcs</a>
         </div>
       </div>
     </nav>
