--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -24,6 +24,12 @@
       <div class="control">{{ form.number.errors }}{{ form.number }}</div>
     </div>
     <div class="field">
+      <label class="label">Story Arcs</label>
+      <div class="control">
+        <div class="select is-multiple">{{ form.arcs }}</div>
+      </div>
+    </div>
+    <div class="field">
       <label class="label">Cover Date</label>
       <div class="control">{{ form.cover_date.errors }}{{ form.cover_date }}</div>
     </div>
