Fix an error field on the credits_form

--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -21,7 +21,7 @@
     <div class="field">
       <label class="label">Roles</label>
       <div class="control">
-        <div class="select is-multiple">{{ form.creator.role }}{{ form.role }}</div>
+        <div class="select is-multiple">{{ form.creator.errors }}{{ form.role }}</div>
       </div>
     </div>
     <div class="field">
