--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -153,7 +153,7 @@
             <div class="content">
               <dl>
               {% for arc in arcs %}
-              <li>{{ arc.name }}</li>
+              <li><a href="{% url 'arc:detail' arc.slug %}">{{ arc.name }}</a></li>
               {% endfor %}
               </dl>
             </div>
