Add the number of issue a creator has in the db to the creator_detail template.
* Added a method to the Creator model to get the issue count.

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -68,6 +68,7 @@
         {% if creator.death %}
           <p><b>Death:</b> {{ creator.death|date:"SHORT_DATE_FORMAT" }}</p>
         {% endif %}
+        <p><b>Number of Issue:</b> {{ creator.issue_count }}</p>
       </div>
     </div>
     <!-- end misc info -->
