--- a/comicsdb/templates/comicsdb/creator_form.html
+++ b/comicsdb/templates/comicsdb/creator_form.html
@@ -3,36 +3,23 @@
 {% block page-title %}Creator Form{% endblock page-title %}
 
 {% block content %}
+  <h1 class="title">Creator Form</h1>
   <form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-    <div class="field">
-      <label class="label">Creator First Name</label>
-      <div class="control">{{ form.first_name }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Creator Last Name</label>
-      <div class="control">{{ form.last_name }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Slug</label>
-      <div class="control">{{ form.slug }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Description</label>
-      <div class="control">{{ form.desc }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Date of Birth</label>
-      <div class="control">{{ form.birth.errors }}{{ form.birth }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Date of Death</label>
-      <div class="control">{{ form.death.errors }}{{ form.death }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Creator Image</label>
-      <div class="control">{{ form.image }}</div>
-    </div>
+    {%csrf_token%}
+    {% for error in form.non_field_errors %}
+      <div class="field is-danger is-small">
+        {{error}}
+      </div>
+    {% endfor %}
+    {% for field in form %}
+      <div class="field is-danger is-small">
+        {{field.errors}}
+      </div>
+      <div class="field">
+        <label class="label">{{ field.label }}</label>
+        <div class="control">{{ field }}</div>
+      </div>
+    {% endfor %}
     <div class="field">
       <div class="control">
         <button class="button is-info" type="submit">Submit</button>
