--- a/comicsdb/templates/comicsdb/publisher_form.html
+++ b/comicsdb/templates/comicsdb/publisher_form.html
@@ -3,32 +3,23 @@
 {% block page-title %}Publisher Form{% endblock page-title %}
 
 {% block content %}
+  <h1 class="title">Publisher Form</h1>
   <form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-    <div class="field">
-      <label class="label">Publisher Name</label>
-      <div class="control">{{ form.name }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Slug</label>
-      <div class="control">{{ form.slug }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Founded</label>
-      <div class="control">{{ form.founded }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Short Description</label>
-      <div class="control">{{ form.short_desc }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Long Description</label>
-      <div class="control">{{ form.desc }}</div>
-    </div>
-    <div class="field">
-      <label class="label">Publisher Logo</label>
-      <div class="control">{{ form.image }}</div>
-    </div>
+    {%csrf_token%}
+    {% for error in form.non_field_errors %}
+      <div class="field is-danger is-small">
+        {{error}}
+      </div>
+    {% endfor %}
+    {% for field in form %}
+      <div class="field is-danger is-small">
+        {{field.errors}}
+      </div>
+      <div class="field">
+        <label class="label">{{ field.label }}</label>
+        <div class="control">{{ field }}</div>
+      </div>
+    {% endfor %}
     <div class="field">
       <div class="control">
         <button class="button is-info" type="submit">Submit</button>
