Move the base template to the project root directory

--- a/comicsdb/templates/comicsdb/publisher_form.html
+++ b/comicsdb/templates/comicsdb/publisher_form.html
@@ -1,4 +1,4 @@
-{% extends 'comicsdb/base.html' %}
+{% extends parent_template|default:"base.html" %}
 
 {% block page-title %}Publisher Form{% endblock page-title %}
 
