--- a/comicsdb/templates/comicsdb/series_form.html
+++ b/comicsdb/templates/comicsdb/series_form.html
@@ -1,4 +1,4 @@
-{% extends 'comicsdb/base.html' %}
+{% extends parent_template|default:"base.html" %}
 
 {% block page-title %}Series Form{% endblock page-title %}
 
