--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -1,4 +1,4 @@
-{% extends 'comicsdb/base.html' %}
+{% extends parent_template|default:"base.html" %}
 
 {% block page-title %}Issue Form{% endblock page-title %}
 
