Add a log in button on the navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,11 @@
           <a class="navbar-item" href="{% url 'creator:list' page=1 %}">Creators</a>
           <a class="navbar-item" href="{% url 'arc:list' page=1 %}">Story Arcs</a>
         </div>
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <a class="button is-light">Log in</a>
+          </div>
+        </div>
       </div>
     </nav>
 
