--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item ">
+        <a class="navbar-item" href="{% url 'home' %}">
           <img src="{% static 'site/img/atomic-symbol.png' %}" width="24" height="24">
         </a>
       </div>
