Refactor the comicsdb templates to have a comics_base template

--- a/comicsdb/templates/comicsdb/confirm_delete.html
+++ b/comicsdb/templates/comicsdb/confirm_delete.html
@@ -1,6 +1,6 @@
-{% extends parent_template|default:"base.html" %}
+{% extends "comicsdb/comics_base.html" %}
 
-{% block content %}
+{% block comic_content %}
 <form method="post">
   {% csrf_token %}
   <div class="field">
