--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -1,8 +1,8 @@
-{% extends parent_template|default:"base.html" %}
+{% extends "comicsdb/comics_base.html" %}
 
 {% block page-title %}Credits Form{% endblock page-title %}
 
-{% block content %}
+{% block comic_content %}
   <form method="POST">
     {{ form.errors }}
     {% csrf_token %}
