--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -1,10 +1,10 @@
-{% extends parent_template|default:"base.html" %}
+{% extends "comicsdb/comics_base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block page-title %}Issue Detail{% endblock page-title %}
 
-{% block content %}
+{% block comic_content %}
   <!-- series issue nav -->
   <nav class="level">
     <div class="level-left">
