--- a/comicsdb/templates/comicsdb/series_list.html
+++ b/comicsdb/templates/comicsdb/series_list.html
@@ -1,10 +1,10 @@
-{% extends parent_template|default:"base.html" %}
+{% extends "comicsdb/comics_base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block page-title %}Series List{% endblock page-title %}
 
-{% block content %}
+{% block comic_content %}
 
   {% if series_list %}
     <nav class="level">
