--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -4,19 +4,23 @@
 {% block page-title %}Login Form{% endblock page-title %}
 
 {% block content %}
-  <h1 class="title">Login</h1>
-  <form method="post">
-    {% csrf_token %}
-    {% for field in form %}
-      <div class="field">
-        <label class="label">{{ field.label }}</label>
-        <div class="control">{% render_field field class+="input" %}</div>
-      </div>
-    {% endfor %}
-    <div class="field">
-      <div class="control">
-        <button class="button is-link" type="submit">Login</button>
-      </div>
+  <section class="section">
+    <div class="container">
+      <h1 class="title">Login</h1>
+      <form method="post">
+        {% csrf_token %}
+        {% for field in form %}
+          <div class="field">
+            <label class="label">{{ field.label }}</label>
+            <div class="control">{% render_field field class+="input" %}</div>
+          </div>
+        {% endfor %}
+        <div class="field">
+          <div class="control">
+            <button class="button is-link" type="submit">Login</button>
+          </div>
+        </div>
+      </form>
     </div>
-  </form>
+  </section>
 {% endblock %}
