--- a/comicsdb/templates/comicsdb/creator_form.html
+++ b/comicsdb/templates/comicsdb/creator_form.html
@@ -6,18 +6,29 @@
   <h1 class="title">Creator Form</h1>
   <form method="post" enctype="multipart/form-data">
     {%csrf_token%}
-    {% for error in form.non_field_errors %}
-      <div class="field is-danger is-small">
-        {{error}}
-      </div>
-    {% endfor %}
+    {% if form.errors %}
+      {% for field in form %}
+        {% for error in field.errors %}
+          <div class="notification is-danger">
+            <strong>{{ error|escape }}</strong>
+          </div>
+        {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
+        <div class="notification is-danger">
+          <strong>{{ error|escape }}</strong>
+        </div>
+      {% endfor %}
+    {% endif %}
     {% for field in form %}
-      <div class="field is-danger is-small">
-        {{field.errors}}
-      </div>
       <div class="field">
         <label class="label">{{ field.label }}</label>
         <div class="control">{{ field }}</div>
+        {% if field.help_text %}
+          <ul>
+            <li class="help">{{ field.help_text|safe }}</li>
+          </ul>
+        {% endif %}
       </div>
     {% endfor %}
     <div class="field">
