Add link to creator's detail view in the issue_detail template

--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -109,7 +109,7 @@
                         </div>
                         <div class="media-content">
                           <div class="content">
-                            <p>{{ credit.creator }}
+                            <p><a href="{% url 'creator:detail' credit.creator.slug %}">{{ credit.creator }}</a>
                             <br>
                             <!-- creator roles -->
                             {% with roles=credit.role.all %}
