--- a/comicsdb/templates/comicsdb/credits_form.html
+++ b/comicsdb/templates/comicsdb/credits_form.html
@@ -1,29 +1,45 @@
 {% extends "comicsdb/comics_base.html" %}
+{% load bulma_tags %}
 
 {% block page-title %}Credits Form{% endblock page-title %}
 
 {% block comic_content %}
-  <form method="POST">
-    {{ form.errors }}
-    {% csrf_token %}
-    <div class="field">
-      <label class="label">Issue</label>
-      <div class="control">
-        <div class="select">{{ form.issue.errors }}{{ form.issue }}</div>
+  <h1 class="title">Credits Form</h1>
+  <form method="post">
+  {% csrf_token %}
+    {% if form.errors %}
+      {% for field in form %}
+        {% for error in field.errors %}
+          <div class="notification is-danger">
+            <strong>{{ error|escape }}</strong>
+          </div>
+        {% endfor %}
+      {% endfor %}
+      {% for error in form.non_field_errors %}
+        <div class="notification is-danger">
+          <strong>{{ error|escape }}</strong>
+        </div>
+      {% endfor %}
+    {% endif %}
+    {% for field in form %}
+      <div class="field">
+        <label class="label">{{ field.label }}</label>
+        {% if field|is_select %}
+          <div class="control">
+            <div class="select {% if field|is_multiple_select %}is-multiple{% endif %}">
+              {{ field }}
+            </div>
+          </div>
+        {% else %}
+          <div class="control">{{ field }}</div>
+        {% endif %}
+        {% if field.help_text %}
+          <ul>
+            <li class="help">{{ field.help_text|safe }}</li>
+          </ul>
+        {% endif %}
       </div>
-    </div>
-    <div class="field">
-      <label class="label">Creator</label>
-      <div class="control">
-        <div class="select">{{ form.creator.errors }}{{ form.creator }}</div>
-      </div>
-    </div>
-    <div class="field">
-      <label class="label">Roles</label>
-      <div class="control">
-        <div class="select is-multiple">{{ form.creator.errors }}{{ form.role }}</div>
-      </div>
-    </div>
+    {% endfor %}
     <div class="field">
       <div class="control">
         <button class="button is-info" type="submit">Submit</button>
