--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,17 @@
     {% endif %}
 
     <footer class="footer">
-      <div class="content has-text-centered">
+      <div class="content has-text-centered is-small">
+        <p>
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+          </a>
+          <br />
+          This work is licensed under a
+          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+            Creative Commons Attribution-ShareAlike 4.0 International License
+          </a>.
+        </p>
         <p>
           Icons made by
           <a href="http://www.freepik.com" title="Freepik" target="_blank" rel="noopener noreferrer">Freepik</a>
