Use is-link color for the home template hero section

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  <section class="hero is-primary is-bold">
+  <section class="hero is-link is-bold">
     <div class="hero-body">
       <div class="container">
         <h1 class="title">Metron</h1>
@@ -14,7 +14,7 @@
   <section>
     <div class="container">
       <div class="box">
-        <h1 class="title is-5">Objective</h1>
+        <h1 class="title is-5">What?</h1>
         <h2 class="subtitle is-6">
           <strong>Metron</strong>
           is a community-based site whose goal is to build an open database with a
