--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -33,7 +33,11 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
+          {% if user.is_authenticated %}
+            <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
+          {% else %}
+            <a class="button is-primary" title="Add a new publisher" disabled>New</a>
+          {% endif %}
         </p>
       </div>
     </nav>
