--- a/comicsdb/templates/comicsdb/series_detail.html
+++ b/comicsdb/templates/comicsdb/series_detail.html
@@ -15,12 +15,21 @@
       </div>
     </div>
     <div class="level-right">
+      {% if user.is_authenticated %}
       <p class="level-item">
         <a class="button is-primary" href="{% url 'series:update' series.slug %}" title="Edit Series">Edit</a>
       </p>
       <p class="level-item">
         <a class="button is-danger" href="{% url 'series:delete' series.slug %}" title="Delete Series">Delete</a>
       </p>
+      {% else %}
+      <p class="level-item">
+        <a class="button is-primary" title="Edit Series" disabled>Edit</a>
+      </p>
+      <p class="level-item">
+        <a class="button is-danger" title="Delete Series"disabled>Delete</a>
+      </p>
+      {% endif %}
     </div>
   </nav>
   <!-- end of page header -->
