Disable buttons on creator templates if user isn't logged in

--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -15,12 +15,21 @@
       </div>
     </div>
     <div class="level-right">
+    {% if user.is_authenticated %}
       <p class="level-item">
         <a class="button is-primary" href="{% url 'creator:update' creator.slug %}" title="Edit creator">Edit</a>
       </p>
       <p class="level-item">
         <a class="button is-danger" href="{% url 'creator:delete' creator.slug %}" title="Delete creator">Delete</a>
       </p>
+    {% else %}
+      <p class="level-item">
+        <a class="button is-primary" title="Edit creator" disabled>Edit</a>
+      </p>
+      <p class="level-item">
+        <a class="button is-danger" title="Delete creator" disabled>Delete</a>
+      </p>
+    {% endif %}
     </div>
   </nav>
   <!-- end of page header -->
