--- a/comicsdb/templates/comicsdb/creator_list.html
+++ b/comicsdb/templates/comicsdb/creator_list.html
@@ -33,7 +33,11 @@
       </div>
       <div class="level-right">
         <p class="level-item">
+        {% if user.is_authenticated %}
           <a class="button is-primary" href="{% url 'creator:create' %}" title="Add a new creator">New</a>
+        {% else %}
+          <a class="button is-primary" title="Add a new creator" disabled>New</a>
+        {% endif %}
         </p>
       </div>
     </nav>
