--- a/comicsdb/templates/comicsdb/arc_detail.html
+++ b/comicsdb/templates/comicsdb/arc_detail.html
@@ -15,12 +15,21 @@
       </div>
     </div>
     <div class="level-right">
+    {% if user.is_authenticated %}
       <p class="level-item">
         <a class="button is-primary" href="{% url 'arc:update' arc.slug %}" title="Edit arc">Edit</a>
       </p>
       <p class="level-item">
         <a class="button is-danger" href="{% url 'arc:delete' arc.slug %}" title="Delete arc">Delete</a>
       </p>
+    {% else %}
+      <p class="level-item">
+        <a class="button is-primary" title="Edit arc" disabled>Edit</a>
+      </p>
+      <p class="level-item">
+        <a class="button is-danger" title="Delete arc" disabled>Delete</a>
+      </p>
+    {% endif %}
     </div>
   </nav>
   <!-- end of page header -->
