--- a/comicsdb/templates/comicsdb/publisher_detail.html
+++ b/comicsdb/templates/comicsdb/publisher_detail.html
@@ -61,6 +61,19 @@
         {% if publisher.desc %}
           <h1 class="title is-5">Summary</h1>
           <p>{{ publisher.desc|linebreaksbr }}</p>
+          {% if publisher.wikipedia %}
+              <br/>
+              <div class="content is-small">
+                This article uses material from the Wikipedia article
+                <a href="https://en.wikipedia.org/wiki/{{ publisher.wikipedia}}">
+                  "{{ publisher.wikipedia }}"
+                </a>
+                , which is released under the
+                <a href="https://creativecommons.org/licenses/by-sa/3.0/">
+                  Creative Commons Attribution-Share-Alike License 3.0
+                </a>.
+              </div>
+          {% endif %}
         {% else %}
            <h1 class="title is-5">No information available.</h1>
         {% endif %}
