--- a/comicsdb/templates/comicsdb/creator_detail.html
+++ b/comicsdb/templates/comicsdb/creator_detail.html
@@ -58,6 +58,19 @@
         {% if creator.desc %}
           <h1 class="title is-5">Summary</h1>
           <p>{{ creator.desc|linebreaksbr }}</p>
+          {% if creator.wikipedia %}
+              <br/>
+              <div class="content is-small">
+                This article uses material from the Wikipedia article
+                <a href="https://en.wikipedia.org/wiki/{{ creator.wikipedia}}">
+                  "{{ creator.wikipedia }}"
+                </a>
+                , which is released under the
+                <a href="https://creativecommons.org/licenses/by-sa/3.0/">
+                  Creative Commons Attribution-Share-Alike License 3.0
+                </a>.
+              </div>
+          {% endif %}
         {% else %}
            <h1 class="title is-5">No information available.</h1>
         {% endif %}
